--- a/404.html
+++ b/404.html
@@ -94,25 +94,21 @@
 
       <div class="content-wrap">
 
-        <!-- Banner
-        ============================================= -->
-        <section id="banner" class="error-banner">
-
-          <div class="banner-wrap">
+          <div class="error-404">
 
             <div class="container">
 
-              <div class="error-404 text-center">
-                <p>Oooops... Page Not Found</p>
-                <h1>404</h1>
-                <button class="btn btn-primary border-0">Go Homepage</button>
+              <div class="text-center">
+                <div class="error-content">
+                  <p>Oooops... Page Not Found</p>
+                  <h1>404</h1>
+                  <button class="btn bg-white text-dark border-0">Go Homepage</button>
+                </div>
               </div>
 
             </div>
 
           </div>
-
-        </section><!-- #banner -->
 
       </div>
 
@@ -139,7 +135,7 @@
               <p class="lh-1 mb-2">Monday – Saturday:</p>
               <p class="lh-1">09 am – 10 pm</p>
             </div>
-            <div class="col-xl-7 d-flex justify-content-between">
+            <div class="col-xl-7 d-md-flex justify-content-between text-center text-md-start">
 
               <div class="col-xl-3">
                 <div class="widget widget-custom-html">
