--- a/contact.html
+++ b/contact.html
@@ -114,10 +114,21 @@
           </div>
 
           <div class="col-lg-4">
-            <p class="lh-1 mb-2">Toronto, Canada</p>
-            <p class="mb-4">7250 Keele St, Unit 76, Vaughan, ON, L4K 1Z8</p>
-            <p class="lh-1 mb-2">Mn - Fr: 9 am - 10 pm </p>
-            <p class="">St: 10 am - 16 pm</p>
+
+            <a href="#" class="icon-box">
+              <div class="icon-header">
+                <p class="lh-1 mb-2">Toronto, Canada</p>
+                <p class="mb-4">7250 Keele St, Unit 76, Vaughan, ON, L4K 1Z8</p>
+              </div>
+            </a>
+
+            <a href="#" class="icon-box">
+              <div class="icon-header">
+                <p class="lh-1 mb-2">Mn - Fr: 9 am - 10 pm </p>
+                <p class="">St: 10 am - 16 pm</p>
+              </div>
+            </a>
+
           </div>
 
         </div> 
@@ -136,7 +147,7 @@
               <div class="heading-block">
                 <h1 class="title text-black">Contact Us</h1>
               </div>
-              <p class="fs-sm text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed dvo eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse </p>
+              <p class="text-light" style="font-size: 0.75rem;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed dvo eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse </p>
             </div>
             <div class="col-lg-8 offset-lg-1">
               <div class="row border-bottom">
@@ -194,7 +205,7 @@
                 <h2 class="title lh-sm mb-3">Send 
                   Message</h2>
               </div>
-              <p class="fs-sm text-light mb-0">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do eiusmod tempor </p>
+              <p class="text-light mb-0" style="font-size: 0.75rem;">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do eiusmod tempor </p>
             </div>
             <div class="col-lg-8 offset-lg-1">
               <div class="row border-bottom">
@@ -225,26 +236,30 @@
       </div>
 
       <!-- Subscribe
-        ============================================= -->
-        <div class="section feedback">
-          <div class="container">
-            <div class="row">
-              <div class="col-xl-4">
-                <div class="heading-block">
-                  <h2 class="title lh-sm text-white">Subscribe 
-                    To Our News</h2>
-                </div>
+      ============================================= -->
+      <div class="section feedback bg-cover" style="background-image: url(./images/subscribe-bg.png);">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-4">
+              <div class="heading-block pb-0">
+                <h2 class="title lh-sm text-white">Subscribe 
+                  To Our News</h2>
               </div>
-              <div class="col-xl-6 offset-xl-2">
-                <div class="d-flex input-group-append mb-5">
-                  <input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="E-mail">
-                    <button class="btn btn-primary border-0 bg-white ms-4 text-black" type="submit">Subscribe</button>
+            </div>
+            <div class="col-xl-6 offset-xl-2">
+              <div class="d-flex input-group-append mb-5">
+                <input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="E-mail">
+                  <button class="btn border-0 bg-white ms-4 text-dark" type="submit">Subscribe</button>
+              </div>
+              <div class="row">
+                <div class="col-lg-8">
+                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra </p>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra </p>
               </div>
             </div>
           </div>
-        </div><!-- Subscribe -->
+        </div>
+      </div><!-- Subscribe -->
 
     </div>
 
@@ -271,7 +286,7 @@
             <p class="lh-1 mb-2">Monday – Saturday:</p>
             <p class="lh-1">09 am – 10 pm</p>
           </div>
-          <div class="col-xl-7 d-flex justify-content-between">
+          <div class="col-xl-7 d-md-flex justify-content-between text-center text-md-start">
 
             <div class="col-xl-3">
               <div class="widget widget-custom-html">
